Fixed text breaking in wrapping section of rd page.

--- a/_sass/minima/_r-d.scss
+++ b/_sass/minima/_r-d.scss
@@ -46,6 +46,10 @@ body.rd-page {
 		-webkit-text-stroke: 1.5px $red;
 	}
 
+	&:last-of-type {
+		padding-bottom: 100px;
+	}
+
 }
 .space-height {
 	height: 5.5vh;
